<resources>
    <string name="app_name">MALDROID</string>
    <string name="maldroid">MALDROID</string>
    <string name="splash_screen_text">Detect. Analayze. Protect</string>
    <string name="ai_powered_apk_malware_detection">AI-POWERED APK MALWARE DETECTION</string>
    <string name="let_s_start_button">GET STARTED</string>
    <string name="recent_scans">Recent Scans</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recent_scans_text">Recent Scans</string>
    <string name="title_settings">Settings</string>
    <string name="Privacy_text">Privacy</string>
    <string name="privacy_text2">Privacy</string>
    <string name="about">About</string>
    <string name="lorem_ipsum_settings">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam ac efficitur mauris, in molestie leo. Cras in interdum lacus. Duis cursus elit eros, vel scelerisque libero sollicitudin quis. Fusce ac sollicitudin metus, sed vehicula lectus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum dignissim ante eget ultrices dignissim. Donec imperdiet mi quis vestibulum sodales. Proin porta nisl nunc, vitae pellentesque tortor ultricies in.\n\nNullam finibus gravida erat, et finibus nisi. Donec at eros tortor. Sed pharetra ligula blandit, dignissim neque non, congue lectus. In eget eros consectetur, lacinia orci at, lacinia purus. Sed in diam vel ligula hendrerit scelerisque.</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="recent_scans_title">Recent Scans</string>
    <string name="no_risky_apps_text">No Risky Apps</string>
    <string name="date_time_text">02/24/23, 6:30 PM</string>
    <string name="recent_scan_text1">No risky apps</string>
    <string name="home_title">Home</string>
    <string name="scan_options_text">Scan Options</string>
    <string name="scan_all_apps_text">Scan all apps</string>
    <string name="scan_apk_text">Scan APK</string>
    <string name="scan_sensitivity_text">Scan sensitivity</string>
    <string name="low_text">Low</string>
    <string name="medium_text">Medium</string>
    <string name="high_text">High</string>
    <string name="auto_scan_downloaded_text">Auto-scan downloaded APKs</string>
    <string name="off_text">Off</string>
    <string name="on_text">On</string>
    <string name="privacy_text_auto_delete_cache">Auto-delete scan logs after 30 days</string>
    <string name="privacy_text_reset_settings_to_default">Reset settings to default</string>
    <string name="privacy_text1">Clear cached APK analysis</string>
    <string name="shield_icon">Icon</string>
    <string name="back_button_text">back_button</string>
    <string name="privacy_text">Privacy</string>
    <string name="malware_risks_text"><![CDATA[Malware & Risks]]></string>
    <string name="_0_text">0%</string>
    <string name="scanning_text">Scanning</string>
    <string name="manual_scan_text">Manual Scan</string>
    <string name="scanned_apps_text">Scanned Apps</string>
    <string name="scan_again_text">Scan Again</string>
    <string name="smart_shield_detects_suspicious_activity_text">Smart Shield detects suspicious activity</string>
    <string name="secure_text">Secure</string>
    <string name="scanned_items_text">Scanned 134 items. No risky apps found.</string>
    <string name="show_more_text">Show More</string>
    <string name="apk_scan_text">APK Scan</string>
    <string name="malicious_detected_text">MALICIOUS DETECTED</string>
    <string name="threats_found_text">Threats found in scanned applications</string>
    <string name="scan_results_text">Scan Results</string>
    <string name="code_patterns">Code Patterns</string>
    <string name="network_links">Network Links</string>
    <string name="threat_details">Threat Details</string>
    <string name="delete_app">Delete App</string>
    <string name="scan_another_apk">Scan Another APK</string>
    <string name="scan_app">Scan App</string>
    <string name="scan_application">Scan Application</string>
    <string name="no_file_selected">No file selected</string>
    <string name="select_app">Select App</string>
    <string name="select_an_application_to_scan">Select an Application to scan</string>
    <string name="application_scanner">Application Scanner</string>
    <string name="app_icon">App Icon</string>
    <string name="search">Search</string>
    <string name="selected_app_icon">Selected Application Icon</string>
    <string name="app_scan_details">App Scan Details</string>
    <string name="scan_another_app">Scan Another App</string>
    <string name="delete_file">Delete File</string>
    <string name="confidence_score">Confidence Score:</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="keep_scan_history">Keep Scan History</string>
    <string name="scan_mode">Scan mode</string>
    <string name="quick_scan">Quick Scan</string>
    <string name="deep_scan">Deep Scan</string>
    <string name="scan_all_apk">Scan All apk</string>
    <string name="about_text">Maldroid is a mobile security application developed as part of an undergraduate thesis. The primary goal of this project is to evaluate the accuracy and efficiency of Machine Learning (ML) models in detecting Android malware. Maldroid uses AI to analyze behavioral patterns identifying malicious intent even in new, unknown apps.</string>
    <string name="using_maldroid_ai_v1_model">Using maldroid-ai-v1 model</string>
    <string name="clear_scan_result">Clear Scan Result</string>
    <string name="file_selection">File Selection</string>
    <string name="select_apk_file">Select APK File</string>
    <string name="scan_apk">Scan APK</string>
    <string name="select_an_apk_file_to_scan">Select an APK file to scan</string>

</resources>