<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/outline_arrow_back_ios_24"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_button_text"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/home"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center" />
        <View
            android:layout_width="40dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/application_scanner"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/selectAppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_app"
        android:textColor="@color/white"
        android:background="@drawable/custom_button"
        android:layout_marginBottom="16dp"
        android:paddingVertical="12dp" />


    <LinearLayout
        android:id="@+id/selectedAppLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/selectedAppIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/selected_app_icon"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/selectedAppName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black" />

    </LinearLayout>

    <TextView
        android:id="@+id/selectedAppText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_file_selected"
        android:textSize="14sp"
        android:textColor="#666666"
        android:layout_marginBottom="24dp"
        android:visibility="visible" />

    <Button
        android:id="@+id/scanAppButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_application"
        android:textColor="@color/white"
        android:background="@drawable/custom_button_green"
        android:layout_marginBottom="24dp"
        android:paddingVertical="12dp" />

    <TextView
        android:id="@+id/scanResultText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_an_application_to_scan"
        android:textSize="16sp"
        android:textColor="#666666"
        android:gravity="center" />

</LinearLayout>