<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ethereal"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backArrow2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/back_button_text"
            android:src="@drawable/outline_arrow_back_ios_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/privacyTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp"
            android:fontFamily="@font/lexenddeca_variablefont_wght"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView

        android:id="@+id/privacyCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:fontFamily="@font/lexenddeca_variablefont_wght"
                    android:text="@string/privacy_text"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    app:drawableStartCompat="@drawable/outline_shield_24" />
            </LinearLayout>

<!--            <Button-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="12dp"-->
<!--                android:fontFamily="@font/lexenddeca_variablefont_wght"-->
<!--                android:text="@string/privacy_text1"-->
<!--                android:background="@drawable/custom_button2"-->
<!--                android:textColor="@color/black"/>-->


            <Button
                android:id="@+id/clearResultScanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexenddeca_variablefont_wght"
                android:layout_marginTop="12dp"
                android:text="@string/clear_scan_result"
                android:background="@drawable/custom_button2"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/resetSettingsButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexenddeca_variablefont_wght"
                android:layout_marginTop="12dp"
                android:text="@string/privacy_text_reset_settings_to_default"
                android:background="@drawable/custom_button2"
                android:textColor="@color/black"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/lexenddeca_variablefont_wght"
                android:text="@string/keep_scan_history"
                android:textSize="16sp"
                android:textColor="@color/black"/>

            <RadioGroup
                android:id="@+id/historyRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioYes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:checked="true"
                    android:textSize="16sp"
                    android:fontFamily="@font/lexenddeca_variablefont_wght"
                    android:text="@string/yes"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioNo"
                    android:fontFamily="@font/lexenddeca_variablefont_wght"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/black"
                    android:text="@string/no"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
