<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_ethereal"
    tools:context=".HomeFragment"
    android:padding="16dp">

    <TextView
        android:id="@+id/homeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/lexenddeca_variablefont_wght"
        android:gravity="center"
        android:text="@string/home_title"
        android:textColor="@color/black"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/tableTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/lineChart"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/malwareStatsCard"
        android:layout_width="0dp"
        android:layout_height="104dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="5dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:background="@color/color_transaparent"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lineChart">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/statsContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/shieldIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/outline_shield_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/malwareRisksText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lexenddeca_variablefont_wght"
                android:text="Malware &amp; Risks"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/malwareCountNumber"
                app:layout_constraintStart_toEndOf="@+id/shieldIcon"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Status Text (No Risky Apps / Risky Apps Detected) -->
            <TextView
                android:id="@+id/statusText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/lexenddeca_variablefont_wght"
                android:text="No Risky Apps"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toStartOf="@+id/malwareCountNumber"
                app:layout_constraintStart_toEndOf="@+id/shieldIcon"
                app:layout_constraintTop_toBottomOf="@+id/malwareRisksText" />

            <!-- Malware Count Number -->
            <TextView
                android:id="@+id/malwareCountNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexenddeca_variablefont_wght"
                android:text="0"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/scanButtonsLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/malwareStatsCard">

        <Button
            android:id="@+id/scanApk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_green"
            android:fontFamily="@font/lexenddeca_variablefont_wght"
            android:text="@string/scan_apk_text"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/scanAllApKBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_green"
            android:fontFamily="@font/lexenddeca_variablefont_wght"
            android:text="@string/scan_all_apk"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

<!--    <Button-->
<!--        android:id="@+id/scanAllApKBtn"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:background="@drawable/custom_button"-->
<!--        android:fontFamily="@font/lexenddeca_variablefont_wght"-->
<!--        android:text="@string/scan_all_apk"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="16sp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/scanButtonsLayout"-->
<!--        app:layout_constraintVertical_bias="0.0" />-->

    <TextView
        android:id="@+id/tableTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/lexenddeca_variablefont_wght"
        android:gravity="center"
        android:text="ML analysis"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/lineChart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>